fix : Changed h1 tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style src="style.css"></style>
 </head>
 <body>
-    <h1>Sivashrekan</h1>
+    <h1>Sivashrekan King</h1>
     <hr>
     <p>Welcome to my page!</p>
 </body>
