feat : added some important changes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Sivashrekan King</h1>
     <hr>
     <h1>Frontend Branch</h1><hr>
+    <h1>This is important code</h1><hr>
     <p>Welcome to my page!</p>
 </body>
 </html>
