fix : some codes in index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Sivashrekan King</h1>
     <hr>
     <h1>Frontend Branch</h1><hr>
+    <h1>I want this line</h1>
     <p>Welcome to my page!</p>
 </body>
 </html>
