--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style src="style.css"></style>
 </head>
 <body>
-    <h1>Sivashrekan King</h1>
+    <h1>Sivashrekan</h1>
     <hr>
     <h1>Frontend Branch</h1><hr>
     <h1>I want this line</h1>
